--- a/webapp/index.html
+++ b/webapp/index.html
@@ -3,12 +3,12 @@
 <head>
     <title>Art hub</title>
     <!--------------------------LIBS------------------------>
-    <script src="bower_components/jquery/dist/jquery.min.js"></script>
-    <script src="bower_components/lodash/dist/lodash.min.js"></script>
-    <script src="bower_components/backbone/backbone-min.js"></script>
-    <script src="bower_components/ractive/ractive.min.js"></script>
-    <script src="bower_components/ractive-backbone/dist/ractive-adaptors-backbone.min.js"></script>
-    <script src="bower_components/backbone-async-route-filter/backbone-async-route-filter.js"></script>
+    <script src="js/libs/jquery/dist/jquery.min.js"></script>
+    <script src="js/libs/lodash/dist/lodash.min.js"></script>
+    <script src="js/libs/backbone/backbone-min.js"></script>
+    <script src="js/libs/ractive/ractive.min.js"></script>
+    <script src="js/libs/ractive-backbone/dist/ractive-adaptors-backbone.min.js"></script>
+    <script src="js/libs/backbone-async-route-filter/backbone-async-route-filter.js"></script>
 
     <!--------------------------APP------------------------->
     <!--utils-->
@@ -62,7 +62,7 @@
     <script src="js/starter.js"></script>
 
     <!-------------------------STYLES----------------------->
-    <link rel="stylesheet" href="bower_components/foundation/css/foundation.min.css"/>
+    <link rel="stylesheet" href="js/libs/foundation/css/foundation.min.css"/>
     <link rel="stylesheet" href="css/main.css"/>
 
 </head>
