--- a/webapp/index.html
+++ b/webapp/index.html
@@ -3,12 +3,12 @@
 <head>
     <title>Art hub</title>
     <!--------------------------LIBS------------------------>
-    <script src="js/libs/jquery/dist/jquery.min.js"></script>
-    <script src="js/libs/lodash/dist/lodash.min.js"></script>
-    <script src="js/libs/backbone/backbone-min.js"></script>
-    <script src="js/libs/ractive/ractive.min.js"></script>
-    <script src="js/libs/ractive-backbone/dist/ractive-adaptors-backbone.min.js"></script>
-    <script src="js/libs/backbone-async-route-filter/backbone-async-route-filter.js"></script>
+    <script src="js/lib/jquery/dist/jquery.min.js"></script>
+    <script src="js/lib/lodash/dist/lodash.min.js"></script>
+    <script src="js/lib/backbone/backbone-min.js"></script>
+    <script src="js/lib/ractive/ractive.min.js"></script>
+    <script src="js/lib/ractive-backbone/dist/ractive-adaptors-backbone.min.js"></script>
+    <script src="js/lib/backbone-async-route-filter/backbone-async-route-filter.js"></script>
 
     <!--------------------------APP------------------------->
     <!--utils-->
@@ -26,43 +26,31 @@
     <script src="js/models/Picture.js"></script>
     <!--views-->
     <script src="js/views/modal/controllers/loadPictureController.js"></script>
+    <script src="js/views/modal/controllers/editAccountController.js"></script>
     <script src="js/views/modal/view.js"></script>
     <script src="js/views/modal/template.js"></script>
 
+    <script src="js/views/base/view.js"></script>
+    <script src="js/views/base/template.js"></script>
+
     <script src="js/views/layout/controller.js"></script>
-    <script src="js/views/layout/view.js"></script>
-    <script src="js/views/layout/template.js"></script>
-
     <script src="js/views/layout/header/controller.js"></script>
-    <script src="js/views/layout/header/view.js"></script>
-    <script src="js/views/layout/header/template.js"></script>
-
     <script src="js/views/layout/workspace/controller.js"></script>
-    <script src="js/views/layout/workspace/view.js"></script>
-    <script src="js/views/layout/workspace/template.js"></script>
-
     <script src="js/views/layout/footer/controller.js"></script>
-    <script src="js/views/layout/footer/view.js"></script>
-    <script src="js/views/layout/footer/template.js"></script>
-
     <script src="js/views/pages/auth/controller.js"></script>
-    <script src="js/views/pages/auth/view.js"></script>
-    <script src="js/views/pages/auth/template.js"></script>
-
     <script src="js/views/pages/dashboard/controller.js"></script>
-    <script src="js/views/pages/dashboard/view.js"></script>
-    <script src="js/views/pages/dashboard/template.js"></script>
-
     <script src="js/views/pages/account/controller.js"></script>
-    <script src="js/views/pages/account/view.js"></script>
-    <script src="js/views/pages/account/template.js"></script>
+    <script src="js/views/pages/gallery/controller.js"></script>
+    <script src="js/views/pages/gallery/item/controller.js"></script>
+    <script src="js/views/pages/search/controller.js"></script>
+    <script src="js/views/pages/settings/controller.js"></script>
     <!--routers-->
     <script src="js/router/router.js"></script>
     <!--start app-->
     <script src="js/starter.js"></script>
 
     <!-------------------------STYLES----------------------->
-    <link rel="stylesheet" href="js/libs/foundation/css/foundation.min.css"/>
+    <link rel="stylesheet" href="js/lib/foundation/css/foundation.min.css"/>
     <link rel="stylesheet" href="css/main.css"/>
 
 </head>
