added tree and folders modules / update base script / update template manager

--- a/webapp/html/dashboard/dashboard.html
+++ b/webapp/html/dashboard/dashboard.html
@@ -1,4 +1,5 @@
 <div class="ah_dashboard-inner">
-    dashboard
-    <a href="javascript:void(0)" on-click="editAccount">Edit account</a>
+    <div class="ah_gallery-component">
+
+    </div>
 </div>
