--- a/webapp/index.html
+++ b/webapp/index.html
@@ -16,19 +16,24 @@
     <script src="js/utils/api.js"></script>
     <script src="js/utils/tools.js"></script>
     <script src="js/utils/token.js"></script>
+    <script src="js/utils/folders.js"></script>
     <!--configs-->
     <script src="js/config/config.js"></script>
     <script src="js/config/dictionary.js"></script>
     <!--models and collections-->
-    <script src="js/collections/Users.js"></script>
-    <script src="js/collections/Pictures.js"></script>
     <script src="js/models/User.js"></script>
     <script src="js/models/Picture.js"></script>
+    <script src="js/collections/Users.js"></script>
+    <script src="js/collections/Pictures.js"></script>
     <!--views-->
     <script src="js/views/modal/controllers/loadPictureController.js"></script>
     <script src="js/views/modal/controllers/editAccountController.js"></script>
     <script src="js/views/modal/view.js"></script>
     <script src="js/views/modal/template.js"></script>
+
+    <script src="js/views/notification/controllers/successController.js"></script>
+    <script src="js/views/notification/view.js"></script>
+    <script src="js/views/notification/template.js"></script>
 
     <script src="js/views/base/view.js"></script>
     <script src="js/views/base/template.js"></script>
@@ -44,6 +49,7 @@
     <script src="js/views/pages/gallery/item/controller.js"></script>
     <script src="js/views/pages/search/controller.js"></script>
     <script src="js/views/pages/settings/controller.js"></script>
+    <script src="js/views/components/folders.js"></script>
     <!--routers-->
     <script src="js/router/router.js"></script>
     <!--start app-->
