--- a/webapp/html/dashboard/dashboard.html
+++ b/webapp/html/dashboard/dashboard.html
@@ -1,4 +1,16 @@
 <div class="ah_dashboard-inner">
-    dashboard
-    <a href="javascript:void(0)" on-click="editAccount">Edit account</a>
+    <div class="ah_header-dashboard small-12">
+        <div class="ah_avatar">
+            <img src="images/avatar.jpg">
+        </div>
+        <div class="ah_name">
+            <h3>Sergey Sukhanov</h3>
+        </div>
+        <div class="ah_active-edit">
+            <a href="javascript:void(0)" on-click="editAccount">Edit account</a>
+        </div>
+    </div>
+    <div class="ah_body-dashboard small-12">
+
+    </div>
 </div>
