--- a/webapp/index.html
+++ b/webapp/index.html
@@ -3,12 +3,12 @@
 <head>
     <title>Art hub</title>
     <!--------------------------LIBS------------------------>
-    <script src="js/lib/jquery/dist/jquery.min.js"></script>
-    <script src="js/lib/lodash/dist/lodash.min.js"></script>
-    <script src="js/lib/backbone/backbone-min.js"></script>
-    <script src="js/lib/ractive/ractive.min.js"></script>
-    <script src="js/lib/ractive-backbone/dist/ractive-adaptors-backbone.min.js"></script>
-    <script src="js/lib/backbone-async-route-filter/backbone-async-route-filter.js"></script>
+    <script src="js/libs/jquery/dist/jquery.min.js"></script>
+    <script src="js/libs/lodash/dist/lodash.min.js"></script>
+    <script src="js/libs/backbone/backbone-min.js"></script>
+    <script src="js/libs/ractive/ractive.min.js"></script>
+    <script src="js/libs/ractive-backbone/dist/ractive-adaptors-backbone.min.js"></script>
+    <script src="js/libs/backbone-async-route-filter/backbone-async-route-filter.js"></script>
 
     <!--------------------------APP------------------------->
     <!--utils-->
@@ -20,10 +20,10 @@
     <script src="js/config/config.js"></script>
     <script src="js/config/dictionary.js"></script>
     <!--models and collections-->
-    <script src="js/collections/Users.js"></script>
-    <script src="js/collections/Pictures.js"></script>
     <script src="js/models/User.js"></script>
     <script src="js/models/Picture.js"></script>
+    <script src="js/collections/Users.js"></script>
+    <script src="js/collections/Pictures.js"></script>
     <!--views-->
     <script src="js/views/modal/controllers/loadPictureController.js"></script>
     <script src="js/views/modal/controllers/editAccountController.js"></script>
@@ -50,7 +50,7 @@
     <script src="js/starter.js"></script>
 
     <!-------------------------STYLES----------------------->
-    <link rel="stylesheet" href="js/lib/foundation/css/foundation.min.css"/>
+    <link rel="stylesheet" href="js/libs/foundation/css/foundation.min.css"/>
     <link rel="stylesheet" href="css/main.css"/>
 
 </head>
