rewrite account and dashboard pages // added auth module

--- a/webapp/html/account/account.html
+++ b/webapp/html/account/account.html
@@ -1,3 +1,27 @@
-<div class="ah_account-inner">
-    account
+<div class="ah_dashboard-inner">
+    {{#user}}
+    <div class="ah_top_dashboard">
+        <div class="ah_back" style="background-image:url({{back}})"></div>
+        <div class="ah_user-info small-9 columns">
+            <div class="ah_avatar" style="background-image:url({{avatar}})"></div>
+            <div class="ah_inner-user-info">
+                <p class="ah_name">{{firstName}} {{lastName}}</p>
+                <p class="ah_city">{{city}}</p>
+            </div>
+        </div>
+
+        {{#if user.id === currentUser.id}}
+        <ul class="ah_my-menu small-3 columns">
+            <li><a href="#">My account</a></li>
+            <li><a href="#">My friends</a></li>
+            <li><a href="#">My gallery</a></li>
+            <li><a href="#">My feedback</a></li>
+            <li><a class="ah_edit-account" href="javascript:void(0)" on-click="editAccount">Edit account</a></li>
+        </ul>
+        {{/if}}
+    </div>
+    {{/user}}
+    <div class="ah_gallery-component">
+
+    </div>
 </div>
