--- a/webapp/index.html
+++ b/webapp/index.html
@@ -3,12 +3,12 @@
 <head>
     <title>Art hub</title>
     <!--------------------------LIBS------------------------>
-    <script src="js/libs/jquery/dist/jquery.min.js"></script>
-    <script src="js/libs/lodash/dist/lodash.min.js"></script>
-    <script src="js/libs/backbone/backbone-min.js"></script>
-    <script src="js/libs/ractive/ractive.min.js"></script>
-    <script src="js/libs/ractive-backbone/dist/ractive-adaptors-backbone.min.js"></script>
-    <script src="js/libs/backbone-async-route-filter/backbone-async-route-filter.js"></script>
+    <script src="js/lib/jquery/dist/jquery.min.js"></script>
+    <script src="js/lib/lodash/dist/lodash.min.js"></script>
+    <script src="js/lib/backbone/backbone-min.js"></script>
+    <script src="js/lib/ractive/ractive.min.js"></script>
+    <script src="js/lib/ractive-backbone/dist/ractive-adaptors-backbone.min.js"></script>
+    <script src="js/lib/backbone-async-route-filter/backbone-async-route-filter.js"></script>
 
     <!--------------------------APP------------------------->
     <!--utils-->
@@ -50,6 +50,9 @@
     <script src="js/views/pages/gallery/item/controller.js"></script>
     <script src="js/views/pages/search/controller.js"></script>
     <script src="js/views/pages/settings/controller.js"></script>
+    <script src="js/views/pages/friends/controller.js"></script>
+    <script src="js/views/pages/people/controller.js"></script>
+    <script src="js/views/pages/news/controller.js"></script>
     <script src="js/views/components/folders.js"></script>
     <!--routers-->
     <script src="js/router/router.js"></script>
@@ -57,7 +60,7 @@
     <script src="js/starter.js"></script>
 
     <!-------------------------STYLES----------------------->
-    <link rel="stylesheet" href="js/libs/foundation/css/foundation.min.css"/>
+    <link rel="stylesheet" href="js/lib/foundation/css/foundation.min.css"/>
     <link rel="stylesheet" href="css/main.css"/>
 
 </head>
