--- a/webapp/index.html
+++ b/webapp/index.html
@@ -9,6 +9,7 @@
     <script src="js/libs/ractive/ractive.min.js"></script>
     <script src="js/libs/ractive-backbone/dist/ractive-adaptors-backbone.min.js"></script>
     <script src="js/libs/backbone-async-route-filter/backbone-async-route-filter.js"></script>
+    <script src="js/libs/ractivedbclick/plugDbClick.js"></script>
 
     <!--------------------------APP------------------------->
     <!--utils-->
