--- a/webapp/html/dashboard/dashboard.html
+++ b/webapp/html/dashboard/dashboard.html
@@ -2,7 +2,7 @@
     <div id="presentation" class="ah_top-head-back">
         <h2>ArtHub</h2>
     </div>
-    <div class="small-12 clearfix">
+    <div class="small-12 clearfix ah_sections-dashboard">
         <div class="small-3 columns ah_dashboard-columns ah_news-dashboard">
             <h3>News</h3>
             <div id="newsShortList" class="ah_news-inner-dashboard">
@@ -19,6 +19,26 @@
             <h3>People</h3>
             <div id="peopleShortList" class="ah_people-inner-dashboard">
                 {{> people}}
+            </div>
+        </div>
+    </div>
+    <div class="small-12 clearfix ah_sections-dashboard">
+        <div class="small-3 columns ah_dashboard-columns ah_events-dashboard">
+            <h3>Events</h3>
+            <div id="eventsShortList" class="ah_events-inner-dashboard">
+                {{> news}}
+            </div>
+        </div>
+        <div class="small-5 columns ah_dashboard-columns ah_lots-dashboard">
+            <h3>Lots</h3>
+            <div id="lotsShortList" class="ah_lots-inner-dashboard">
+                {{> news}}
+            </div>
+        </div>
+        <div class="small-4 columns ah_dashboard-columns ah_groups-dashboard">
+            <h3>Groups</h3>
+            <div id="groupsShortList" class="ah_groups-inner-dashboard">
+                {{> news}}
             </div>
         </div>
     </div>
