--- a/webapp/index.html
+++ b/webapp/index.html
@@ -33,6 +33,7 @@
     <script src="js/views/modal/controllers/loadPictureController.js"></script>
     <script src="js/views/modal/controllers/editAccountController.js"></script>
     <script src="js/views/modal/controllers/newFolderController.js"></script>
+    <script src="js/views/modal/controllers/showPictureController.js"></script>
     <script src="js/views/modal/view.js"></script>
     <script src="js/views/modal/template.js"></script>
 
