--- a/webapp/html/dashboard/dashboard.html
+++ b/webapp/html/dashboard/dashboard.html
@@ -3,7 +3,7 @@
         <h2>ArtHub</h2>
     </div>
     <div class="small-12 clearfix ah_main-dashboard">
-        <div class="small-12 columns ah_columns ah_columns-side border-right">
+        <div class="small-12 columns ah_columns ah_columns-clear ah_columns-side border-right">
             <div class="small-12 ah_articles-dashboard ah_section-dashboard">
                 <h3>Articles</h3>
                 <div id="articlesShortList" class="ah_inner-section-dashboard">
@@ -17,7 +17,7 @@
                 </div>
             </div>
         </div>
-        <div class="small-12 columns ah_columns ah_feed-dashboard">
+        <div class="small-12 columns ah_columns ah_columns-clear ah_feed-dashboard">
             <div class="small-12 ah_inner-feed-dashboard ah_section-dashboard">
                 <h3>Feed</h3>
                 <div id="picturesShortList" class="ah_inner-section-dashboard">
@@ -25,7 +25,7 @@
                 </div>
             </div>
         </div>
-        <div class="small-12 columns ah_columns ah_columns-side border-left">
+        <div class="small-12 columns ah_columns ah_columns-clear ah_columns-side border-left">
             <div class="small-12 ah_people-dashboard ah_section-dashboard">
                 <h3>People</h3>
                 <div id="peopleShortList" class="ah_inner-section-dashboard">
