--- a/webapp/html/modal/newFolder.html
+++ b/webapp/html/modal/newFolder.html
@@ -1,3 +1,9 @@
 <div class="ah_new-folder-modal">
-    new folder create
+    <h3>Create new folder</h3>
+    <div class="ah_row">
+        <input id="nameFolderModal" type="text" value="{{data.folder.title}}"/>
+    </div>
+    <div class="ah_row">
+        <input type="button" value="Create folder" on-click="createFolder"/>
+    </div>
 </div>
