--- a/webapp/index.html
+++ b/webapp/index.html
@@ -34,6 +34,9 @@
     <script src="js/views/modal/controllers/editAccountController.js"></script>
     <script src="js/views/modal/controllers/newFolderController.js"></script>
     <script src="js/views/modal/controllers/showPictureController.js"></script>
+    <script src="js/views/modal/controllers/confirmRemoveFolderController.js"></script>
+    <script src="js/views/modal/controllers/editFolderController.js"></script>
+    <script src="js/views/modal/controllers/editPictureController.js"></script>
     <script src="js/views/modal/view.js"></script>
     <script src="js/views/modal/template.js"></script>
 
