--- a/webapp/html/account/home.html
+++ b/webapp/html/account/home.html
@@ -17,7 +17,7 @@
             {{#if showType === "folder"}}
             <div data-id="{{id}}" class="ah_item-gallery ah_item-gallery-folder" on-doubleclick="openFolder" on-click="selectItem">
                 <div class="ah_edit-item">
-                    <a href="javascript:void(0)" on-click="editFolder">Edit</a>
+                    <a href="javascript:void(0)" on-click="editFolder: {{this}}">Edit</a>
                     <a href="javascript:void(0)" on-click="removeFolder">Remove</a>
                 </div>
                 <div class="ah_img-item-gallery" style="background-image: url({{url}});"></div>
@@ -27,7 +27,7 @@
             {{#if showType === "picture"}}
             <div data-id="{{id}}" class="ah_item-gallery ah_item-gallery-picture" on-doubleclick="showPicture:{{this}}" on-click="selectItem">
                 <div class="ah_edit-item">
-                    <a href="javascript:void(0)" on-click="editPicture">Edit</a>
+                    <a href="javascript:void(0)" on-click="editPicture:{{this}}">Edit</a>
                     <a href="javascript:void(0)" on-click="removePicture">Remove</a>
                 </div>
                 <div class="ah_img-item-gallery" style="background-image: url({{url}});"></div>
