--- a/webapp/html/modal/newFolder.html
+++ b/webapp/html/modal/newFolder.html
@@ -4,6 +4,6 @@
         <input id="nameFolderModal" type="text" value="{{data.folder.title}}"/>
     </div>
     <div class="ah_row">
-        <input type="button" value="Create folder" on-click="createFolder"/>
+        <input type="button" value="Create folder" on-click="create"/>
     </div>
 </div>
