--- a/webapp/index.html
+++ b/webapp/index.html
@@ -18,6 +18,7 @@
     <script src="js/utils/token.js"></script>
     <script src="js/utils/folders.js"></script>
     <script src="js/utils/plugDbClick.js"></script>
+    <script src="js/utils/plugHover.js"></script>
     <!--configs-->
     <script src="js/config/config.js"></script>
     <script src="js/config/dictionary.js"></script>
@@ -30,17 +31,11 @@
     <script src="js/collections/Pictures.js"></script>
     <script src="js/collections/Articles.js"></script>
     <!--views-->
-    <script src="js/views/modal/controllers/loadPictureController.js"></script>
-    <script src="js/views/modal/controllers/editAccountController.js"></script>
-    <script src="js/views/modal/controllers/newFolderController.js"></script>
-    <script src="js/views/modal/controllers/showPictureController.js"></script>
-    <script src="js/views/modal/controllers/confirmRemoveFolderController.js"></script>
-    <script src="js/views/modal/controllers/editFolderController.js"></script>
-    <script src="js/views/modal/controllers/editPictureController.js"></script>
+    <script src="js/views/modal/controller.js"></script>
     <script src="js/views/modal/view.js"></script>
     <script src="js/views/modal/template.js"></script>
 
-    <script src="js/views/notification/controllers/successController.js"></script>
+    <script src="js/views/notification/controller.js"></script>
     <script src="js/views/notification/view.js"></script>
     <script src="js/views/notification/template.js"></script>
 
