--- a/webapp/html/account/friends.html
+++ b/webapp/html/account/friends.html
@@ -1,3 +1,8 @@
 <div>
-    friends account
+    <h3>Friends</h3>
+    <div class="ah_friends-account">
+        {{#friends}}
+        {{firstName}}
+        {{/friends}}
+    </div>
 </div>
