--- a/webapp/html/modal/editFolder.html
+++ b/webapp/html/modal/editFolder.html
@@ -4,6 +4,6 @@
         <input type="text" value="{{data.item.title}}"/>
     </div>
     <div class="ah_row">
-        <a href="javascript:void(0)" on-click="saveFolder">Edit folder</a>
+        <a href="javascript:void(0)" on-click="edit">Edit folder</a>
     </div>
 </div>
