fixed document events

--- a/webapp/html/account/friends.html
+++ b/webapp/html/account/friends.html
@@ -2,7 +2,11 @@
     <h3>Friends</h3>
     <div class="ah_friends-account">
         {{#friends}}
-        {{firstName}}
+        <div class="ah_people-item" on-click="userPage">
+            <div data-id="{{id}}" class="ah_img-people-item" style="background-image: url({{avatar}})">
+                <small>{{this.fullName()}}</small>
+            </div>
+        </div>
         {{/friends}}
     </div>
 </div>
