--- a/webapp/html/account/home.html
+++ b/webapp/html/account/home.html
@@ -1,24 +1,28 @@
 <div class="ah_inner-account-home small-12 clearfix">
-    <div class="ah_row">
-        <h3>Personal info:</h3>
-        <div class="ah_inner-block">
-            <ul>
-                <li>
-                    <span class="title">Location:</span>
-                    <span class="value">Russia, Saint-Petersburg</span>
-                </li>
-                <li>
-                    <span class="title">Activity:</span>
-                    <span class="value">artist</span>
-                </li>
-                <li>
-                    <span class="title">About me:</span>
+    <div class="small-6 columns">
+        <div class="ah_row">
+            <h3>Personal info:</h3>
+            <div class="ah_inner-block">
+                <ul>
+                    <li>
+                        <span class="title">Location:</span>
+                        <span class="value">Russia, Saint-Petersburg</span>
+                    </li>
+                    <li>
+                        <span class="title">Activity:</span>
+                        <span class="value">artist</span>
+                    </li>
+                    <li>
+                        <span class="title">About me:</span>
                     <span class="value">
                         description. long long description. very long description.
                     </span>
-                </li>
-            </ul>
+                    </li>
+                </ul>
+            </div>
         </div>
+    </div>
+    <div class="small-6 columns">
         <h3>Links:</h3>
         <div class="ah_inner-block">
             <ul>
@@ -36,7 +40,9 @@
                 </li>
             </ul>
         </div>
-        <h3>Gallery</h3>
+    </div>
+    <div class="small-12 columns">
+        <h3>Gallery:</h3>
         <div class="ah_inner-block">
 
         </div>
