--- a/webapp/index.html
+++ b/webapp/index.html
@@ -26,10 +26,12 @@
     <script src="js/models/User.js"></script>
     <script src="js/models/Picture.js"></script>
     <script src="js/models/Article.js"></script>
+    <script src="js/models/Basket.js"></script>
 
     <script src="js/collections/Users.js"></script>
     <script src="js/collections/Pictures.js"></script>
     <script src="js/collections/Articles.js"></script>
+    <script src="js/collections/Basket.js"></script>
     <!--views-->
     <script src="js/views/modal/controller.js"></script>
     <script src="js/views/modal/view.js"></script>
