--- a/webapp/html/dashboard/dashboard.html
+++ b/webapp/html/dashboard/dashboard.html
@@ -2,12 +2,16 @@
     <div class="ah_top-dashboard">
         <h2>ArtHub</h2>
     </div>
-    <div class="ah_pictures">
-        <h2>Photos</h2>
+    <div class="ah_row ah_row-dashboard">
+        <h3>Photos</h3>
         {{> pictures}}
     </div>
-    <div class="ah_artists">
-        <h2>Artists</h2>
+    <div class="ah_row ah_row-dashboard">
+        <h3>Artists</h3>
         {{> people}}
+    </div>
+    <div class="ah_row ah_row-dashboard">
+        <h3>Articles</h3>
+        {{> articles}}
     </div>
 </div>
